# John-Creasy

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: vgb.yml
.serena/: project.yml
src/vgb/: __init__.py  __main__.py  interface_cli.py
src/vgb/application/: __init__.py
src/vgb/application/ports/: __init__.py  ai_analyzer.py  notifier.py  repository.py  source.py
src/vgb/application/use_cases/: __init__.py  monitor_diario.py
src/vgb/domain/: __init__.py  entities.py  enums.py  exceptions.py  value_objects.py
src/vgb/infrastructure/: __init__.py
src/vgb/infrastructure/ai/: __init__.py  composite_analyzer.py  gemini_analyzer.py  ocr_analyzer.py  openrouter_analyzer.py
src/vgb/infrastructure/config/: __init__.py  settings.py
src/vgb/infrastructure/http/: __init__.py  resilient_client.py
src/vgb/infrastructure/notifications/: __init__.py  emergency_notifier.py  telegram_notifier.py
src/vgb/infrastructure/storage/: __init__.py  database.py  models.py  repositories.py
src/vgb/infrastructure/web/: __init__.py  web_source.py
tests/: __init__.py
tests/integration/: test_source.py
tests/unit/: test_composite_analyzer.py  test_domain.py  test_emergency_notifier.py  test_gemini_analyzer.py  test_monitor_diario.py  test_ocr_analyzer.py  test_telegram_notifier.py
